[gd_scene load_steps=3 format=3 uid="uid://brt11lbnebfl7"]

[ext_resource type="Script" path="res://effect_capture_to_wav.gd" id="1_8b4i4"]

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_n7l6k"]

[node name="SileroMic" type="Node"]
script = ExtResource("1_8b4i4")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "AudioEffectCapture to Wav"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RecordButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Record"

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
disabled = true
text = "Play"

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
disabled = true
text = "Save Wav res://capture.wav"

[node name="Status" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="AudioStreamRecord" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMicrophone_n7l6k")
autoplay = true
bus = &"Record"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/RecordButton" to="." method="_on_record_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
